// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`icons/general/IconMinusThin should correctly render default icon 1`] = `
<AccessibleSVG
  className="icon-minus-thin "
  height={1}
  viewBox="0 0 9 1"
  width={9}
>
  <path
    className="fill-color"
    d="M0 0h9v1H0z"
    fill="#222"
    fillRule="evenodd"
  />
</AccessibleSVG>
`;

exports[`icons/general/IconMinusThin should correctly render icon with specified props 1`] = `
<AccessibleSVG
  className="icon-minus-thin test"
  height={100}
  title="title"
  viewBox="0 0 9 1"
  width={200}
>
  <path
    className="fill-color"
    d="M0 0h9v1H0z"
    fill="#444"
    fillRule="evenodd"
  />
</AccessibleSVG>
`;
